# flan

./: .gitignore  README.md  pyproject.toml  readme.md
deep_ancestry/: __init__.py  glbl.py
deep_ancestry/fl-engine/: client.py  client_runner.py
deep_ancestry/nn/: lightning.py  loader.py  models.py
deep_ancestry/pca/: federated_plink.py  local_plink.py
deep_ancestry/preprocess/: __init__.py  downloader.py  qc.py  sample_splitter.py
deep_ancestry/utils/: cache.py  plink.py
flan/: __init__.py  glbl.py  node.py  server.py
flan/fl_engine/: utils.py
flan/nn/: lightning.py  loader.py
flan/pca/: __init__.py  federated_plink.py
flan/preprocess/: __init__.py  downloader.py  fed_qc.py  pgen.py  pruner.py  qc.py  sample_splitter.py
flan/utils/: __init__.py  cache.py  plink.py
scripts/: __init__.py
scripts/configs/: config.yaml  node.yaml  server.yaml
scripts/configs/cache/: file.yaml  node0.yaml  node1.yaml  node2.yaml  server.yaml
scripts/configs/fed_pca/: pstack.yaml  server.yaml
scripts/configs/fed_qc/: server.yaml  tg.yaml
scripts/configs/node/: localhost.yaml
scripts/configs/node/client/: localhost.yaml
scripts/configs/output/: report.yaml
scripts/configs/pca/: global.yaml
scripts/configs/predict/: file.yaml
scripts/configs/prune/: default.yaml
scripts/configs/qc/: tg.yaml
scripts/configs/source/: node0_pgen20.yaml  node1_50.yaml  node1_pgen20.yaml  node2_pgen50.yaml
scripts/configs/train/: global.yaml
